--- a/app/globals.css
+++ b/app/globals.css
@@ -1,2 +1,18 @@
 @import "tailwindcss";
+@theme  {
+  ---breakpoint-nm:90rem;
+}
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap');
+
+.font-quicksand {
+   font-family: "Quicksand", sans-serif;
+}
+
+.font-opensans {
+  font-family: "Open Sans", sans-serif
+}
+
+.image {
+  background-image: url(/public/heroImages/green.png);
+}
