--- a/app/globals.css
+++ b/app/globals.css
@@ -1,18 +1,19 @@
-@import "tailwindcss";
-@theme  {
-  ---breakpoint-nm:90rem;
+@import 'tailwindcss';
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Quicksand:wght@300..700&display=swap');
+@theme {
+  --font-quicksand : 'Quicksand', sans-serif;
+  --font-opensans: 'Open Sans', sans-serif;
+  --font-pacifico: 'Pacifico', cursive;
+  
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap');
 
-.font-quicksand {
-   font-family: "Quicksand", sans-serif;
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none; 
 }
 
-.font-opensans {
-  font-family: "Open Sans", sans-serif
-}
-
-.image {
-  background-image: url(/public/heroImages/green.png);
-}
